--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/tailwindcss/tailwind.css",
               "src/styles.scss"
             ],
             "scripts": []
