--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,6 @@
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
-              "src/styles/tailwind.css",
               "src/styles/styles.scss"
             ],
             "scripts": []
@@ -101,9 +100,7 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ngx-toastr/toastr.css",
-              "src/styles/tailwind.css",
-              "src/styles/styles.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           }
